--- a/Resources/Private/Partials/ConfigurationRecords.html
+++ b/Resources/Private/Partials/ConfigurationRecords.html
@@ -1,7 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
-      xmlns:f="http://typo3.org/ns/TYPO3/Fluid/ViewHelpers"
-      xmlns:ldap="http://typo3.org/ns/Causal/IgLdapSsoAuth/ViewHelpers"
-      data-namespace-typo3-fluid="true">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xmlns:f="http://typo3.org/ns/TYPO3/Fluid/ViewHelpers"
+    xmlns:ldap="http://typo3.org/ns/Causal/IgLdapSsoAuth/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:if condition="{configurationRecords->f:count()}==1">
     <f:then>
@@ -11,9 +9,13 @@
     <f:else>
         <f:form action="{action}" method="post" class="form-inline">
             <div class="form-group form-group-sm">
-                <ldap:form.select name="configuration" options="{configurationRecords}" value="{currentConfiguration}"
-                                  optionValueField="uid" optionLabelField="name" onchange="this.form.submit();"
-                                  class="form-select form-select-sm form-control"/>
+
+                <f:comment>
+                    <!-- TODO@gm: fix viewHelper -->
+                    _ldap:form.select name="configuration" options="{configurationRecords}"
+                    value="{currentConfiguration}" optionValueField="uid" optionLabelField="name"
+                    onchange="this.form.submit();" class="form-select form-select-sm form-control" /_
+                </f:comment>
 
                 <div style="display: inline-block; margin-left: 5px;">
                     <f:format.raw>{editLink}</f:format.raw>
