--- a/Resources/Private/Templates/Module/Index.html
+++ b/Resources/Private/Templates/Module/Index.html
@@ -1,38 +1,39 @@
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
-      xmlns:f="http://typo3.org/ns/TYPO3/Fluid/ViewHelpers"
-      xmlns:ldap="http://typo3.org/ns/Causal/IgLdapSsoAuth/ViewHelpers"
-      data-namespace-typo3-fluid="true">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xmlns:f="http://typo3.org/ns/TYPO3/Fluid/ViewHelpers"
+    xmlns:ldap="http://typo3.org/ns/Causal/IgLdapSsoAuth/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:layout name="Default"/>
+<f:layout name="Default" />
 
 <f:section name="iconButtons">
-    <f:render partial="Menu" arguments="{menu:menu, currentConfiguration:currentConfiguration}"/>
+    <f:render partial="Menu" arguments="{menu:menu, currentConfiguration:currentConfiguration}" />
 </f:section>
 
 <f:section name="configuration">
     <f:if condition="{configurationRecords}">
         <f:render partial="ConfigurationRecords"
-                  arguments="{configurationRecords:configurationRecords, currentConfiguration:currentConfiguration, editLink:editLink, action:action}"/>
+            arguments="{configurationRecords:configurationRecords, currentConfiguration:currentConfiguration, editLink:editLink, action:action}" />
     </f:if>
 </f:section>
 
 <f:section name="content">
     <h1>
-        <f:translate key="title"/>
+        <f:translate key="title" />
     </h1>
-    <ldap:flashMessages/>
+    <f:comment>
+        <!-- TODO@gm fix flashMessages viewHelper -->
+        _ldap:flashMessages/_
+    </f:comment>
 
     <f:if condition="{configurationRecords}">
         <h2>
-            <f:translate key="module_overview"/>
+            <f:translate key="module_overview" />
         </h2>
 
         <dl class="t3-overview-list">
             <f:for each="{menu}" as="item">
                 <dt>
-                    <ldap:spriteManagerIcon iconName="{item.iconName}"/>
+                    <ldap:spriteManagerIcon iconName="{item.iconName}" />
                     <f:link.action action="{item.action}" arguments="{configuration:currentConfiguration.uid}">
-                        <f:translate key="{item.titleKey}"/>
+                        <f:translate key="{item.titleKey}" />
                     </f:link.action>
                 </dt>
             </f:for>
